clusters/k3s/apps/media/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
  - port: 9696
    targetPort: 9696
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prowlarr
  namespace: docker-services
subsets:
- addresses:
  - ip: 192.168.1.40
  ports:
  - port: 9696
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: prowlarr
  namespace: docker-services
  labels:
    kubernetes.io/service-name: prowlarr
addressType: IPv4
endpoints:
- addresses:
  - 192.168.1.40
ports:
- port: 9696
  protocol: TCP
